js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-with-import-call-unknown.js
DONOTEVALUATE
(
)
;
with
(
{
}
)
{
import
.
UNKNOWN
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
